--- a/front-end/index.html
+++ b/front-end/index.html
@@ -19,13 +19,13 @@
     <header>
       <h1>Amazon Product Scraper</h1>
 
-      <div id="search-section">
+      <form id="search-section">
         <input type="text" placeholder="Search Amazon" id="search-input" />
         <span>
-          <button id="search-btn">Search</button>
+          <button id="search-btn" type="submit">Search</button>
           <img src="/loading.gif" alt="loading" id="loading" />
         </span>
-      </div>
+      </form>
 
       <span id="message"></span>
     </header>
