in english please

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -20,7 +20,7 @@
       <h1>Amazon Product Scraper</h1>
 
       <form id="search-section">
-        <input type="text" placeholder="Search Amazon" id="search-input" />
+        <input type="text" placeholder="Search Amazon (in English)" id="search-input" />
         <span>
           <button id="search-btn" type="submit">Search</button>
           <img src="/loading.gif" alt="loading" id="loading" />
